crates/tests/src/snapshots/dwn_test__scenarios__author_delegated_grant__configure.snap
---
source: crates/test-node/src/scenarios/author_delegated_grant.rs
assertion_line: 65
expression: reply
snapshot_kind: text
---
status:
  code: 202
descriptor:
  interface: Protocols
  method: Configure
  messageTimestamp: "[messageTimestamp]"
  definition:
    protocol: "http://email-protocol.xyz"
    published: true
    types:
      email:
        schema: "http://email"
        dataFormats:
          - text/plain
    structure:
      email:
        $actions:
          - who: anyone
            can:
              - create
          - who: author
            of: email
            can:
              - read
          - who: recipient
            of: email
            can:
              - read
        email:
          $actions:
            - who: anyone
              can:
                - create
            - who: author
              of: email/email
              can:
                - read
            - who: recipient
              of: email/email
              can:
                - read
authorization:
  signature:
    payload: "[payload]"
    signatures:
      - protected: eyJhbGciOiJFZERTQSIsInR5cCI6Imp3dCIsImtpZCI6ImRpZDprZXk6ejZNa3FXR1ZVd013dDRhaHhFU1RWZzFnanZ4WjR3NEtrWG9ta3NTTWRDQjNlSGVEI3o2TWtxV0dWVXdNd3Q0YWh4RVNUVmcxZ2p2eFo0dzRLa1hvbWtzU01kQ0IzZUhlRCJ9
        signature: "[signature]"
  authorDelegatedGrant:
    descriptor:
      interface: Records
      method: Write
      messageTimestamp: "[messageTimestamp]"
      protocol: "https://vercre.website/dwn/permissions"
      protocolPath: grant
      recipient: "did:key:z6MkqWGVUwMwt4ahxESTVg1gjvxZ4w4KkXomksSMdCB3eHeD"
      dataCid: "[dataCid]"
      dataSize: 194
      dataFormat: application/json
      dateCreated: "[dateCreated]"
    authorization:
      signature:
        payload: "[payload]"
        signatures:
          - protected: eyJhbGciOiJFZERTQSIsInR5cCI6Imp3dCIsImtpZCI6ImRpZDprZXk6ejZNa2o4SnIxcmczWWpWV1doZzdhaEVZSmlicWhqQmdadDFwRENiVDRMdjdENEhYI3o2TWtqOEpyMXJnM1lqVldXaGc3YWhFWUppYnFoakJnWnQxcERDYlQ0THY3RDRIWCJ9
            signature: "[signature]"
    recordId: "[recordId]"
    contextId: "[contextId]"
    encodedData: "[encodedData]"
